Instead of using ICollection<> changed to IQueryable<>

--- a/MechanicHelper/Views/Home/Index.cshtml
+++ b/MechanicHelper/Views/Home/Index.cshtml
@@ -1,8 +1,27 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
+
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Check out these cars!</h1>
+    <div class="row">
+        @model IQueryable<Car>
+        @foreach (var car in Model)
+        {
+            <div class="col-4">
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" style="width: 18rem;" src="@car.Model" alt="Card image cap">
+                    <div class="card-body">
+                        <p class="card-title">@car.Make</p>
+                        <p class="card-text">@car.Model</p>
+                        <p class="card-text">@car.Built</p>
+                        <p class="card-text">@car.Model</p>
+                        <p class="card-text">Number of repairs: @car.Repairs.Count()</p>
+                        <p class="card-text">Number of problems: @car.Problems.Count()</p>
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
 </div>
