--- a/MechanicHelper/Views/Home/Index.cshtml
+++ b/MechanicHelper/Views/Home/Index.cshtml
@@ -12,15 +12,16 @@
         @foreach (var car in Model)
         {
             <div class="col-4">
-                <a asp-action=""
-                <div class="card" style="width: 18rem;">
-                    <div class="card-body">
-                        <p class="card-title">Make: @car.Make @car.Model</p>
-                        <p class="card-text">Built: @car.Built</p>
-                        <p class="card-text">Distance: @car.Distance</p>
-                        <p class="card-text">Num of problems: @car.Problems.Count</p>
+                <a asp-controller="Cars" asp-action="Details" asp-route-id="@car.CarId">
+                    <div class="card" style="width: 18rem;">
+                        <div class="card-body">
+                            <p class="card-title">Make: @car.Make @car.Model</p>
+                            <p class="card-text">Built: @car.Built</p>
+                            <p class="card-text">Distance: @car.Distance</p>
+                            <p class="card-text">Num of problems: @car.Problems.Count</p>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
         }
     </div>
